Added getOptions. Cleaned up html.

--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,23 @@
 <html>
 <head>
-    <title>Video Streaming Demonstration</title>
+    <title>Menu</title>
 </head>
 <body>
-<h1>Video Streaming Demonstration</h1>
-<img src="/video_feed">
+<h1>Menu</h1>
+<ul>
+    <li><a href="/public/stream.html">Video Stream</a></li>
+</ul>
+<ul>
+    <li><a href="/state">state</a></li>
+    <li><a href="/state">info</a></li>
+</ul>
+<ul>Get Option
+    <li><a href="/getOption/captureInterval">captureInterval</a></li>
+    <li><a href="/getOption/captureMode">captureMode</a></li>
+    <li><a href="/getOption/captureNumber">captureNumber</a></li>
+    <li><a href="/getOption/iso">iso</a></li>
+    <li><a href="/getOption/fileFormat">fileFormat</a></li>
+    <li><a href="/getOption/previewFormat">previewFormat</a></li>
+</ul>
 </body>
 </html>
