Implement wireless streaming via home router.

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </ul>
 <ul>
     <li><a href="/state">state</a></li>
-    <li><a href="/state">info</a></li>
+    <li><a href="/info">info</a></li>
 </ul>
 <ul>Get Option
     <li><a href="/getOption/captureInterval">captureInterval</a></li>
