--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
     <li><a href="/getOption/iso">iso</a></li>
     <li><a href="/getOption/fileFormat">fileFormat</a></li>
     <li><a href="/getOption/previewFormat">previewFormat</a></li>
+    <li><a href="/getOption/previewFormatSupport">previewFormatSupport</a></li>
 </ul>
 </body>
 </html>
